# high-frequency-trading-system-simulation

./: CMakeLists.txt  LICENSE  README.md
data/: historical_data.csv  sample_trade_data.csv
docs/: architecture_and_design.md  repository_overview.md  requirements.md
high-frequency-trading-system-simulation/: CMakeLists.txt  high-frequency-trading-system-simulation.cpp
high-frequency-trading-system-simulation/backtesting/: BacktestingEngine.cpp  BacktestingEngine.hpp  HistoricalDataLoader.cpp  HistoricalDataLoader.hpp
high-frequency-trading-system-simulation/historical_data/: DataFormats.hpp  HistoricalDataStore.cpp  HistoricalDataStore.hpp
high-frequency-trading-system-simulation/market_data_feed/: MarketDataFeed.cpp  MarketDataFeed.hpp  MarketDataProtocols.hpp  MarketDataSubscriber.hpp
high-frequency-trading-system-simulation/monitoring/: Alerts.hpp  Monitoring.cpp  Monitoring.hpp
high-frequency-trading-system-simulation/order_book/: Order.hpp  OrderBook.cpp  OrderBook.hpp
high-frequency-trading-system-simulation/order_execution/: OrderExecutionEngine.cpp  OrderExecutionEngine.hpp  RDMAConnection.hpp
high-frequency-trading-system-simulation/risk_management/: RiskManager.cpp  RiskManager.hpp  RiskPolicies.hpp
high-frequency-trading-system-simulation/trading_strategy/: MarketMakingStrategy.cpp  MarketMakingStrategy.hpp  StrategyFactory.hpp  TradingStrategy.cpp  TradingStrategy.hpp  TrendFollowingStrategy.cpp  TrendFollowingStrategy.hpp
high-frequency-trading-system-simulation/utils/: ConfigManager.cpp  ConfigManager.hpp  Logger.cpp  Logger.hpp
(+26 files in other folders)
